--- a/index.html
+++ b/index.html
@@ -22,25 +22,23 @@
   </div>
 
   <!-- Page main container with rows -->
-  <div class="container">
+  <div id = "maincontainer"class="container">
     <div class="row">
 
-    <div class="col">
+    <div class="col-4" id = "searchBlock">
+
       <form id="search">
       <h5 class="display-6">Search for a City:</h5>
       <input type="text" class="form-control" id="city" aria-describedby="basic-addon3">
-      <div class="col">
       <input class="btn btn-primary" id="search" type="submit" value="Search">
-    </div>
+
+      <div id="list-group" class="card" style="width: 18rem;"></div>
+
       </form>
+
     </div>
- 
-    <ul class="list-group">
-    </ul>
 
- 
-
-    <div class="col">
+    <div class="col-8">
 
         <div id="search-results">
           <h5 id="city-name"></h5>
@@ -74,12 +72,49 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript">
+
+    function refresh() {  
+    var cityLocal = localStorage.getItem('citySearch');
+    $("h6").remove();
+
+    if (cityLocal !== null) {
+      var cityLocalArray = JSON.parse(cityLocal);
+      for (i = 0; i < cityLocalArray.length; i++) {
+      console.log(cityLocalArray[i]);
+      var searchHistory = $("<h6></h6>").text(cityLocalArray[i]).addClass("city-list");
+      $("#list-group").append(searchHistory);
+    }
+
+    }
+  };
+
     //Add click event listener
     $("#search").click(function(){
     event.preventDefault();  
     var cityName = $("#city").val();
-    localStorage.citySearch= $("#city").val();
-    console.log(cityName);
+    if(cityName === "") {
+      return; 
+    }
+
+    var citySearchArray = localStorage.getItem('citySearch'); 
+
+    if (citySearchArray === null) {
+      citySearchArray = [];
+      citySearchArray.push(cityName)
+      localStorage.setItem('citySearch', JSON.stringify(citySearchArray))
+    }  
+    else {
+      var localCity = JSON.parse(citySearchArray);
+      console.log(localCity);
+      const cityPresent = localCity.filter(element => element !== cityName);
+      console.log(cityPresent); 
+      cityPresent.push(cityName);
+      console.log(cityPresent);
+      localStorage.setItem('citySearch', JSON.stringify(cityPresent));
+  
+    }
+    
+    refresh();
 
     // // This is our API key
     var APIKey = "4c023acf398932e1b43cd03002ad8542";
@@ -98,13 +133,7 @@
       })
         // We store all of the retrieved data inside of an object called "response"
         .then(function(response) {
-  
-          // Log the queryURL
-          console.log(queryURL1);
-  
-          // Log the resulting object
-          console.log(response);
-  
+
           // Get current date
           var d = new Date();
           var strDate = (d.getMonth()+1) + "/" + d.getDate() + "/" + d.getFullYear();
@@ -114,11 +143,6 @@
           $("#city-name").text(response.name + " " + strDate);                   
           // Convert the temp to fahrenheit
           var tempF = ((response.main.temp - 273.15) * 1.80 + 32).toFixed(2);
-
-          // Log the data in the console as well
-          console.log("Wind Speed: " + response.wind.speed);
-          console.log("Humidity: " + response.main.humidity);
-          console.log("Temperature (F): " + tempF);
 
           // Transfer content to HTML
           $("#icon").attr("src", "https://openweathermap.org/img/w/" + response.weather[0].icon + ".png")
@@ -135,14 +159,6 @@
       })
       // We store all of the retrieved data inside of an object called "response2"
         .then(function(response2) {
-  
-          // Log the queryURL
-          console.log(queryURL2);
-  
-          // Log the resulting object
-          console.log(response2);
-
-
           $("section").each(function(index){
 
           // Creating div to hold elements 
@@ -151,7 +167,6 @@
 
           // Separating array for each day from response
             var response2Arr= response2.list[index*9];
-            // console.log(response2Arr);
 
           // Creating element & appending them for forecast
             var cityName = response2.city.name;
@@ -165,8 +180,6 @@
             dateVal.append(responseCityIcon);
             responseCityIcon.attr("src", "https://openweathermap.org/img/w/" + response2Arr.weather[0].icon + ".png")
 
-
-
             var responseTemp = ((response2Arr.main.temp - 273.15) * 1.80 + 32).toFixed(2);
             var responseTempEl =$("<div>").addClass("temp");
             dateVal.append(responseTempEl);
@@ -179,17 +192,13 @@
             console.log(responseHum);
             responseHumEl.text("Humidity: " + responseHum);
 
-
-
-
-
-
-
           });
 
         }); 
 
       });
+
+      refresh(); 
 
 
 
