--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="col-8">
 
         <div id="search-results">
-          <h5 id="city-name"></h5>
+          <h5 id="city-name" ></h5>
           <img id="icon">
           <p id="temp"></p>
           <p id="humidity"></p>
@@ -49,7 +49,7 @@
         </div>
 
         <div id="forecast">
-          <h6>5-Day Forecast:</h6>
+          <h5>5-Day Forecast:</h5>
           <div class="row">
             <section class="col daily" id="day1"></section>
             <section class="col daily" id="day2"></section>
@@ -92,6 +92,8 @@
     $("#search").click(function(){
     event.preventDefault();  
     var cityName = $("#city").val();
+   
+
     if(cityName === "") {
       return; 
     }
@@ -136,19 +138,22 @@
 
           // Get current date
           var d = new Date();
+
           var strDate = (d.getMonth()+1) + "/" + d.getDate() + "/" + d.getFullYear();
           console.log(strDate);
 
+          $("#icon").attr("src", "https://openweathermap.org/img/w/" + response.weather[0].icon + ".png")
+
+
           // Transfer content to HTML
-          $("#city-name").text(response.name + " " + strDate);                   
+          $("#city-name").text(response.name + " " + "(" + strDate + ")");                   
           // Convert the temp to fahrenheit
           var tempF = ((response.main.temp - 273.15) * 1.80 + 32).toFixed(2);
 
           // Transfer content to HTML
-          $("#icon").attr("src", "https://openweathermap.org/img/w/" + response.weather[0].icon + ".png")
-          $("#temp").text("Temperature: " + tempF +" F");
-          $("#humidity").text("Humidity: " + response.main.humidity);
-          $("#wind-speed").text("Wind Speed: " + response.wind.speed);
+          $("#temp").text("Temperature: " + tempF + " " + "°F");
+          $("#humidity").text("Humidity: " + response.main.humidity + "%"); 
+          $("#wind-speed").text("Wind Speed: " + response.wind.speed + " " +"MPH");
         }); 
 
 
@@ -159,6 +164,7 @@
       })
       // We store all of the retrieved data inside of an object called "response2"
         .then(function(response2) {
+          $("section").children().remove();
           $("section").each(function(index){
 
           // Creating div to hold elements 
@@ -170,7 +176,11 @@
 
           // Creating element & appending them for forecast
             var cityName = response2.city.name;
-            var responseDt = response2Arr.dt_txt;
+
+            var d = new Date(response2Arr.dt_txt);
+            var responseDt = (d.getMonth()+1) + "/" + d.getDate() + "/" + d.getFullYear();
+
+            console.log(responseDt);
             console.log(cityName);
             var responseCityEl = $("<div>").addClass("cityName");
             dateVal.append(responseCityEl);
@@ -184,13 +194,13 @@
             var responseTempEl =$("<div>").addClass("temp");
             dateVal.append(responseTempEl);
             console.log(responseTemp);
-            responseTempEl.text("Temperature: " + responseTemp +" F");;
+            responseTempEl.text("Temperature: " + responseTemp + " " + "°F");;
 
             var responseHum = response2Arr.main.humidity; 
             var responseHumEl =$("<div>").addClass("temp");
             dateVal.append(responseHumEl);
             console.log(responseHum);
-            responseHumEl.text("Humidity: " + responseHum);
+            responseHumEl.text("Humidity: " + responseHum + "%");
 
           });
 
