changed css for forecast

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             var responseTempEl =$("<div>").addClass("temp");
             dateVal.append(responseTempEl);
             console.log(responseTemp);
-            responseTempEl.text("Temperature: " + responseTemp + " " + "°F");;
+            responseTempEl.text("Temp: " + responseTemp + " " + "°F");;
 
             var responseHum = response2Arr.main.humidity; 
             var responseHumEl =$("<div>").addClass("temp");
